<?xml version="1.0"?>
<package format="2">
  <name>eigen_kdl</name>
  <version>0.13.4</version>
  <description>

     Conversion functions between:
      - Eigen and KDL

  </description>
  <author>Stuart Glaser</author>
  <author>Adam Leeper</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>orocos_kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
