<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>examples_tf2_py</name>
  <version>0.33.2</version>
  <description>
    Has examples of using the tf2 Python API.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>Apache License 2.0</license>

  <author email="sloretz@openrobotics.org">Shane Loretz</author>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <!-- Required for automatic documentation generation (using sphinx-autodoc)
  for modules in this package that import the tf2_ros module from the
  tf2_ros_py package. -->
  <doc_depend>tf2_ros</doc_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
