<package format="2">
  <name>test_tf2</name>
  <version>0.13.14</version>
  <description>
    tf2 unit tests
  </description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/geometry_experimental</url>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>
  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
