<?xml version="1.0"?>
<package format="2">
  <name>tf2</name>
  <version>0.19.0</version>
  <description>
    tf2 is the second generation of the transform library, which lets
    the user keep track of multiple coordinate frames over time. tf2
    maintains the relationship between coordinate frames in a tree
    structure buffered in time, and lets the user transform points,
    vectors, etc between any two coordinate frames at any desired
    point in time.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/tf2</url>

  <author email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</author>
  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_runtime_cpp</build_depend>
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>

  <depend>console_bridge_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
