<?xml version="1.0"?>
<package format="2">
  <name>tf2</name>
  <version>0.33.2</version>
  <description>
    tf2 is the second generation of the transform library, which lets
    the user keep track of multiple coordinate frames over time. tf2
    maintains the relationship between coordinate frames in a tree
    structure buffered in time, and lets the user transform points,
    vectors, etc between any two coordinate frames at any desired
    point in time.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/tf2</url>

  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rosidl_runtime_cpp</build_depend>
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>

  <depend>builtin_interfaces</depend>
  <depend>console_bridge_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
