<package>
  <name>tf2_bullet</name>
  <version>0.9.1</version>
  <description>
    tf2_bullet
  </description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/tf2_bullet</url>
  <author email="tfoote@osrfoundation.org">Tully Foote</author>
  <author>Wim Meeussen</author>

  <build_depend>tf2</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>tf2</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
